@@ -1,0 +1,26 @@
+<gconfschemafile>
+    <schemalist>
+      <schema>
+         <key>/schemas/desktop/gnome/applications/at/mobility/exec</key>
+         <applyto>/desktop/gnome/applications/at/mobility/exec</applyto>
+         <owner>gnome</owner>
+	 <type>string</type>
+         <default>dasher</default>
+         <locale name="C">
+            <short>Preferred Mobility assistive technology application</short>
+            <long>Preferred Mobility assistive technology application be used for login, menu, or command line</long>
+         </locale>
+      </schema>    
+      <schema>
+         <key>/schemas/desktop/gnome/applications/at/mobility/startup</key>
+         <applyto>/desktop/gnome/applications/at/mobility/startup</applyto>
+         <owner>gnome</owner>
+	 <type>bool</type>
+         <default>false</default>
+         <locale name="C">
+            <short>Start preferred Mobility assistive technology application</short>
+            <long>GNOME to start preferred Mobility assistive technology application during login</long>
+         </locale>
+      </schema>    
+    </schemalist>
+</gconfschemafile>
