@@ -1,0 +1,26 @@
+<gconfschemafile>
+    <schemalist>
+      <schema>
+         <key>/schemas/desktop/gnome/applications/at/visual/exec</key>
+         <applyto>/desktop/gnome/applications/at/visual/exec</applyto>
+         <owner>gnome</owner>
+	 <type>string</type>
+         <default>orca</default>
+         <locale name="C">
+            <short>Preferred Visual assistive technology application</short>
+            <long>Preferred Visual assistive technology application be used for login, menu, or command line</long>
+         </locale>
+      </schema>    
+      <schema>
+         <key>/schemas/desktop/gnome/applications/at/visual/startup</key>
+         <applyto>/desktop/gnome/applications/at/visual/startup</applyto>
+         <owner>gnome</owner>
+	 <type>bool</type>
+         <default>false</default>
+         <locale name="C">
+            <short>Start preferred Visual assistive technology application</short>
+            <long>GNOME to start preferred Visual assistive technology application during login</long>
+         </locale>
+      </schema>    
+    </schemalist>
+</gconfschemafile>
