@@ -1,5 +1,13 @@
 2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* schemas/Makefile.am:
+	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
+	* schemas/desktop_gnome_applications_at_visual.schemas.in:
+	Add schemas for AT preferred applications. Patch from
+	George Kraft IV. Closes bug #387219.
+
+2007-01-06  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* schemas/desktop_gnome_lockdown.schemas.in:
 	Add key to disable the screensaver. Patch from
 	Guillaume Desmottes. Closes bug #386864.
